# JPO-Projekt-2025

ProjektJPO2025/: CMakeLists.txt
ProjektJPO2025/Projekt_Kalkulator/: CMakeLists.txt
ProjektJPO2025/Projekt_Kalkulator/src/: Kalkulator.cpp  Kalkulator.h  Konwersja.cpp  Konwersja.h  Matematyka.cpp  Matematyka.h  main.cpp
ProjektJPO2025/Projekt_Kalkulator/tests/: CMakeLists.txt  Kalkulator_dla_elektronikow_GTest.cpp
